Adjust padding to fix content squish on mobile

--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -167,17 +167,17 @@ main {
 }
 main > section.container {
   width: 100%;
-  max-width: 120rem;
+  max-width: 100rem;
   margin-right: auto;
   margin-left: auto;
-  padding: 10rem;
+  padding: 8rem 2rem 8rem 2rem;
 }
 main > section.container-wide {
   width: 100%;
-  max-width: 200rem;
+  max-width: 180rem;
   margin-right: auto;
   margin-left: auto;
-  padding: 10rem;
+  padding: 8rem 2rem 8rem 2rem;
 }
 div.container {
   max-width: 120rem;
